--- a/Text and String Preprocessing/natural language toolkit/nltk.ipynb
+++ b/Text and String Preprocessing/natural language toolkit/nltk.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 66,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,9 +13,10 @@
     "    WhitespaceTokenizer,\n",
     "    WordPunctTokenizer,\n",
     ")\n",
-    "from nltk.corpus import stopwords\n",
+    "from nltk.corpus import stopwords, wordnet, movie_reviews\n",
+    "import random, nltk\n",
     "\n",
-    "from nltk.stem import PorterStemmer, LancasterStemmer"
+    "from nltk.stem import PorterStemmer, LancasterStemmer, WordNetLemmatizer"
    ]
   },
   {
@@ -34,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -108,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -156,7 +157,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -165,7 +166,7 @@
        "['This', 'example', 'showing', 'stop', 'words', 'filtration', '.']"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -186,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -241,7 +242,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -259,7 +260,7 @@
       "\n",
       "words before :  ['It', 'is', 'very', 'imporatant', 'to', 'be', 'pythonly', 'while', 'you', 'are', 'pythoning', 'with', 'python', '.', 'All', 'pythoners', 'have', 'pythoned', 'poorly', 'at', 'least', 'ones', '.'] \n",
       "\n",
-      "words after :  {'.', 'to', 'pythonli', 'veri', 'poorli', 'it', 'least', 'with', 'imporat', 'are', 'is', 'one', 'be', 'python', 'while', 'have', 'all', 'at', 'you'} \n",
+      "words after :  {'poorli', '.', 'while', 'you', 'veri', 'python', 'least', 'are', 'have', 'is', 'imporat', 'be', 'with', 'pythonli', 'to', 'all', 'it', 'at', 'one'} \n",
       "\n"
      ]
     }
@@ -312,7 +313,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +332,7 @@
       "\n",
       "words before :  ['It', 'is', 'very', 'imporatant', 'to', 'be', 'pythonly', 'while', 'you', 'are', 'pythoning', 'with', 'python', '.', 'All', 'pythoners', 'have', 'pythoned', 'poorly', 'at', 'least', 'ones', '.'] \n",
       "\n",
-      "words after :  {'hav', '.', 'at', 'you', 'al', 'to', 'poor', 'least', 'python', 'very', 'ar', 'on', 'be', 'whil', 'imp', 'with', 'is', 'it'} \n",
+      "words after :  {'you', 'to', 'ar', 'it', 'python', 'least', 'very', 'at', 'hav', 'al', '.', 'is', 'whil', 'on', 'poor', 'be', 'with', 'imp'} \n",
       "\n"
      ]
     }
@@ -366,6 +367,210 @@
     "\n",
     "print(\"words after : \", filtered_words, \"\\n\")"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "[3.3 WordNetLemmatizer]()\n",
+    "\n",
+    "It's used for lemmatization, which is the process of reducing words to their base or root form, known as the lemma.\n",
+    "\n",
+    "For example:\n",
+    "\n",
+    "    The lemma of \"running\" is \"run\".\n",
+    "\n",
+    "    The lemma of \"better\" is \"good\".\n",
+    "\n",
+    "Lemmatization is useful in NLP tasks for standardizing words so that variations of the same word are treated as identical, which can improve the accuracy of analyses like text classification or information retrieval\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 36,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "run\n",
+      "dog\n",
+      "church\n",
+      "hardrock\n",
+      "read\n",
+      "reader\n",
+      "better\n",
+      "good\n"
+     ]
+    }
+   ],
+   "source": [
+    "lemma = WordNetLemmatizer()\n",
+    "print(lemma.lemmatize(word=\"running\", pos=\"v\"))\n",
+    "print(lemma.lemmatize(\"dogs\"))\n",
+    "print(lemma.lemmatize(\"churches\"))\n",
+    "print(lemma.lemmatize(\"hardrock\", pos=\"v\"))\n",
+    "print(lemma.lemmatize(\"reading\", pos=\"v\"))\n",
+    "print(lemma.lemmatize(\"reader\", pos=\"v\"))\n",
+    "print(lemma.lemmatize(\"better\"))\n",
+    "print(lemma.lemmatize(\"better\", pos=\"a\"))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [4.0 wordnet]()\n",
+    "\n",
+    "WordNet is a lexical database for the English language. It groups English words into sets of synonyms called synsets, each expressing a distinct concept. These synsets are interconnected by means of conceptual-semantic and lexical relations\n",
+    "\n",
+    "Here are some key features of WordNet:\n",
+    "\n",
+    "- Synonym Sets (Synsets): WordNet organizes words into synsets, which are groups of words that are synonymous with each other. For example, the synset for the word \"car\" might include synonyms such as \"automobile\" and \"vehicle\".\n",
+    "\n",
+    "- Antonyms: WordNet includes antonyms for many words, allowing for the representation of opposite concepts. For example, \"hot\" is an antonym of \"cold\".\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 63,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "synsets of word good : \n",
+      "\n",
+      "[Synset('good.n.01'), Synset('good.n.02'), Synset('good.n.03'), Synset('commodity.n.01'), Synset('good.a.01'), Synset('full.s.06'), Synset('good.a.03'), Synset('estimable.s.02'), Synset('beneficial.s.01'), Synset('good.s.06'), Synset('good.s.07'), Synset('adept.s.01'), Synset('good.s.09'), Synset('dear.s.02'), Synset('dependable.s.04'), Synset('good.s.12'), Synset('good.s.13'), Synset('effective.s.04'), Synset('good.s.15'), Synset('good.s.16'), Synset('good.s.17'), Synset('good.s.18'), Synset('good.s.19'), Synset('good.s.20'), Synset('good.s.21'), Synset('well.r.01'), Synset('thoroughly.r.02')]\n",
+      "all words of word good : \n",
+      "\n",
+      "{'adept', 'effective', 'well', 'estimable', 'beneficial', 'commodity', 'thoroughly', 'good', 'full', 'dear', 'dependable'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "snys = wordnet.synsets(\"good\")\n",
+    "\n",
+    "# synsets\n",
+    "print(\"synsets of word good : \\n\")\n",
+    "print(snys)\n",
+    "\n",
+    "# words\n",
+    "\n",
+    "words = set()\n",
+    "\n",
+    "for i, s in enumerate(snys):\n",
+    "    words.add(snys[i].lemmas()[0].name())\n",
+    "\n",
+    "print(\"all words of word good : \\n\")\n",
+    "print(words)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "all words of word good : \n",
+      "\n",
+      "{'well', 'estimable', 'proficient', 'salutary', 'beneficial', 'unspoilt', 'upright', 'in_force', 'in_effect', 'good', 'full', 'soundly', 'commodity', 'undecomposed', 'skillful', 'right', 'thoroughly', 'sound', 'expert', 'skilful', 'serious', 'practiced', 'near', 'dear', 'goodness', 'ripe', 'adept', 'unspoiled', 'safe', 'effective', 'just', 'secure', 'trade_good', 'honest', 'honorable', 'respectable', 'dependable'} \n",
+      "\n",
+      "words and thier antonyms :\n",
+      "\n",
+      "[['good', 'evil'], ['goodness', 'evilness'], ['good', 'bad'], ['goodness', 'badness'], ['good', 'bad'], ['good', 'evil'], ['well', 'ill']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "synonyms = set()\n",
+    "antonyms = []\n",
+    "for syn in snys:\n",
+    "    for l in syn.lemmas():\n",
+    "        synonyms.add(l.name())\n",
+    "        if l.antonyms():\n",
+    "            antonyms.append([l.name(), l.antonyms()[0].name()])\n",
+    "\n",
+    "\n",
+    "print(\"all words of word good : \\n\")\n",
+    "print(synonyms, \"\\n\")\n",
+    "print(\"words and thier antonyms :\\n\")\n",
+    "print(antonyms)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# [4.0 Text Classification problem]()\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 91,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "train acc =  91.3\n",
+      "test acc =  94.0\n"
+     ]
+    }
+   ],
+   "source": [
+    "documents = [\n",
+    "    (list(movie_reviews.words(fileid)), cat)\n",
+    "    for cat in movie_reviews.categories()\n",
+    "    for fileid in movie_reviews.fileids(cat)\n",
+    "]\n",
+    "\n",
+    "all_words = []\n",
+    "\n",
+    "for w in movie_reviews.words():\n",
+    "    all_words.append(w.lower())\n",
+    "\n",
+    "all_words = nltk.FreqDist(all_words)\n",
+    "\n",
+    "word_features = list(all_words.keys())[:6000]\n",
+    "\n",
+    "\n",
+    "def find_features(document):\n",
+    "\n",
+    "    words = set(document)\n",
+    "\n",
+    "    features = {}\n",
+    "    for w in word_features:\n",
+    "        features[w] = w in words\n",
+    "\n",
+    "    return features\n",
+    "\n",
+    "\n",
+    "features = [(find_features(review), cat) for (review, cat) in documents]\n",
+    "\n",
+    "\n",
+    "train = features[:2000]\n",
+    "test = features[1900:]\n",
+    "\n",
+    "\n",
+    "clf = nltk.NaiveBayesClassifier.train(train)\n",
+    "\n",
+    "print(\"train acc = \", nltk.classify.accuracy(clf, train) * 100)\n",
+    "print(\"test acc = \", nltk.classify.accuracy(clf, test) * 100)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
